--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>With Love, For Ritu – Happy Birthday 🎂</title>
+  <title>With Love, For Ritu – Happy Birthday diyuu 🎂</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -144,7 +144,7 @@
     <div class="custom-photo">
       <label for="file-upload" style="display: flex; align-items: center; gap: 8px; font-weight: 600; color: #ff4081; cursor: pointer;">
         <img src="https://cdn-icons-png.flaticon.com/512/1051/1051326.png" alt="Upload Icon" style="width: 24px; height: 24px;" />
-        Upload your favorite photo of Ritu 👇
+        Upload your favorite photo of diyuu 👇
       </label><br /><br />
       <input id="file-upload" type="file" accept="image/*" onchange="previewPhoto(event)" />
       <br /><br />
