--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>With Love, For Ritu – Happy Birthday 🎂</title>
+  <title>With Love, For Diyuu – Happy Birthday 🎂</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -131,20 +131,20 @@
 <body>
   <div class="container">
     <img src="https://cdn.pixabay.com/photo/2020/04/08/14/45/birthday-5016070_960_720.jpg" alt="Happy Birthday" class="birthday-img" />
-    <h1>🎉 With Love, For Ritu – Happy Birthday 🎂</h1>
+    <h1>🎉 With Love, For Diyuu – Happy Birthday 🎂</h1>
     <p class="typing">You are the light in every room, the smile that lifts hearts, and the soul of every celebration. ✨</p>
     <p>May your day be filled with joy, laughter, and sweet memories you’ll always cherish.</p>
     <button onclick="showSurprise()">Click for a Surprise 🎁</button>
 
     <div id="popup">
-      Sudip wishes you a truly magical birthday, Ritu! 💖<br />
+      Sudip wishes you a truly magical birthday, Diyuu! 💖<br />
       May all your dreams come true.
     </div>
 
     <div class="custom-photo">
       <label for="file-upload" style="display: flex; align-items: center; gap: 8px; font-weight: 600; color: #ff4081; cursor: pointer;">
         <img src="https://cdn-icons-png.flaticon.com/512/1051/1051326.png" alt="Upload Icon" style="width: 24px; height: 24px;" />
-        Upload your favorite photo of Ritu 👇
+        Upload your favorite photo of Diyuu 👇
       </label><br /><br />
       <input id="file-upload" type="file" accept="image/*" onchange="previewPhoto(event)" />
       <br /><br />
