--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://cdn.pixabay.com/photo/2020/04/08/14/45/birthday-5016070_960_720.jpg" alt="Happy Birthday" class="birthday-img" />
+    <img src="https://graph.org/file/65d13cb4db9fc2956d886-025342438d2a065598.jpg" alt="Happy Birthday" class="birthday-img" />
     <h1>🎉 With Love, For Diyuu – Happy Birthday 🎂</h1>
     <p class="typing">You are the light in every room, the smile that lifts hearts, and the soul of every celebration. ✨</p>
     <p>May your day be filled with joy, laughter, and sweet memories you’ll always cherish.</p>
