--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     function releaseBalloons() {
       for (let i = 0; i < 15; i++) {
         const balloon = document.createElement("img");
-        balloon.src = "https://cdn-icons-png.flaticon.com/512/616/616408.png";
+        balloon.src = "https://graph.org/file/9e5d1e17b8a077ee32752-6818928587a718b1fb.jpg";
         balloon.classList.add("balloon");
         balloon.style.left = Math.random() * 100 + "vw";
         balloon.style.animationDelay = (i * 0.4) + "s";
